--- a/src/standard/route53-dns.yaml
+++ b/src/standard/route53-dns.yaml
@@ -39,6 +39,18 @@ Resources:
   #       DNSName: !Ref S3WebsiteEndpoint
 
 Outputs:
+  HostedZoneId:
+    Value: !GetAtt DNS.Id
+    Description: HostedZone ID
+    Export:
+      Name:
+        Fn::Sub: "${AWS::StackName}-HostedZoneId"
+  NameServers:
+    Value:
+      Fn::Join:
+        - ","
+        - !GetAtt DNS.NameServers
+    Description: URL for a static website hosted on S3
   RootDomainName:
     Value: !Ref RootDomainName
     Description: Root domain name
@@ -51,12 +63,6 @@ Outputs:
     Export:
       Name:
         Fn::Sub: "${AWS::StackName}-WildcardRootDomainName"
-  HostedZoneId:
-    Value: !GetAtt DNS.Id
-    Description: HostedZone ID
-    Export:
-      Name:
-        Fn::Sub: "${AWS::StackName}-HostedZoneId"
   DomainName:
     Value: !Ref DomainName
     Description: HostedZone domain name
@@ -69,9 +75,15 @@ Outputs:
     Export:
       Name:
         Fn::Sub: "${AWS::StackName}-WildcardDomainName"
-  NameServers:
-    Value:
-      Fn::Join:
-        - ","
-        - !GetAtt DNS.NameServers
-    Description: URL for a static website hosted on S3
+  AppDomainName:
+    Value: !Sub "app.${DomainName}"
+    Description: Domain name for frontend application
+    Export:
+      Name:
+        Fn::Sub: "${AWS::StackName}-AppDomainName"
+  ServiceDomainName:
+    Value: !Sub "service.${DomainName}"
+    Description: Domain name for backend services
+    Export:
+      Name:
+        Fn::Sub: "${AWS::StackName}-ServiceDomainName"
