fix wrong apigw custom domain cert region

--- a/src/standard/api-gateway.yaml
+++ b/src/standard/api-gateway.yaml
@@ -85,7 +85,7 @@ Resources:
     Properties:
       DomainName:
         Fn::ImportValue: !Sub "${Route53DNSStack}-ServiceDomainName"
-      CertificateArn: !Ref RegionalCertificate
+      RegionalCertificateArn: !Ref RegionalCertificate
       EndpointConfiguration:
         Types:
           - REGIONAL
