fxi test apis stack wrong import

--- a/src/standard/apigw-test-endpoint.yaml
+++ b/src/standard/apigw-test-endpoint.yaml
@@ -139,7 +139,7 @@ Resources:
           ThrottlingRateLimit: 100
       AccessLogSetting:
         DestinationArn:
-          Fn::ImportValue: !Sub "${ApiGatewayStack}-ApiGatewayIdLogGroupArn"
+          Fn::ImportValue: !Sub "${ApiGatewayStack}-ApiGatewayLogGroupArn"
         Format: $context.extendedRequestId $context.identity.sourceIp $context.identity.caller $context.identity.user [$context.requestTime] "$context.httpMethod $context.resourcePath $context.protocol" $context.status $context.responseLength $context.requestId
 
   MyApiMapping:
