fix test endpoints mock RequestTemplates

--- a/src/standard/api-gateway.yaml
+++ b/src/standard/api-gateway.yaml
@@ -35,6 +35,7 @@ Resources:
       IdentitySource: method.request.header.Authorization
       ProviderARNs:
         - Fn::ImportValue: !Sub "${CognitoStack}-CognitoUserPoolArn"
+      IdentityValidationExpression: !Sub ".*${ApiGateway.RestApiId}.*"
 
   ###############################################
   # API Gateway Logging
